@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014-2021 Thomas Akehurst
+ * Copyright (C) 2014-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,41 +16,45 @@
 package com.github.tomakehurst.wiremock.common;
 
 import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.Iterables.transform;
-import static com.google.common.collect.Lists.newArrayList;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 import static java.lang.Thread.currentThread;
 import static java.util.Arrays.asList;
 
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Iterators;
 import com.google.common.io.Resources;
 import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.Enumeration;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 public class ClasspathFileSource implements FileSource {
 
   private final String path;
+  private final ClassLoader classLoader;
   private URI pathUri;
   private ZipFile zipFile;
   private File rootDirectory;
 
   public ClasspathFileSource(String path) {
+    this((ClassLoader) null, path);
+  }
+
+  public ClasspathFileSource(Class<?> classpath, String path) {
+    this(classpath.getClassLoader(), path);
+  }
+
+  public ClasspathFileSource(ClassLoader classLoader, String path) {
     this.path = path;
+    this.classLoader = classLoader;
 
     try {
-      URL resource =
-          firstNonNull(currentThread().getContextClassLoader(), Resources.class.getClassLoader())
-              .getResource(path);
+      URL resource = getClassLoader().getResource(path);
 
       if (resource == null) {
         rootDirectory = new File(path);
@@ -68,13 +72,19 @@ public class ClasspathFileSource implements FileSource {
       } else if (pathUri.getScheme().equals("file")) {
         rootDirectory = new File(pathUri);
       } else {
-        throw new RuntimeException(
+        throw new IllegalArgumentException(
             "ClasspathFileSource can't handle paths of type " + pathUri.getScheme());
       }
 
     } catch (Exception e) {
       throwUnchecked(e);
     }
+  }
+
+  private ClassLoader getClassLoader() {
+    if (classLoader != null) return classLoader;
+    return getFirstNonNull(
+        currentThread().getContextClassLoader(), Resources.class.getClassLoader());
   }
 
   private boolean isFileSystem() {
@@ -108,10 +118,10 @@ public class ClasspathFileSource implements FileSource {
       if (candidate.getName().equals(lookFor)) {
         return getUriFor(candidate);
       }
-      candidates.append(candidate.getName() + "\n");
+      candidates.append(candidate.getName()).append("\n");
     }
     throw new RuntimeException(
-        "Was unable to find entry: \"" + lookFor + "\", found:\n" + candidates.toString());
+        "Was unable to find entry: \"" + lookFor + "\", found:\n" + candidates);
   }
 
   @Override
@@ -119,7 +129,7 @@ public class ClasspathFileSource implements FileSource {
 
   @Override
   public FileSource child(String subDirectoryName) {
-    return new ClasspathFileSource(path + "/" + subDirectoryName);
+    return new ClasspathFileSource(classLoader, path + "/" + subDirectoryName);
   }
 
   @Override
@@ -136,25 +146,15 @@ public class ClasspathFileSource implements FileSource {
   public List<TextFile> listFilesRecursively() {
     if (isFileSystem()) {
       assertExistsAndIsDirectory();
-      List<File> fileList = newArrayList();
+      List<File> fileList = new ArrayList<>();
       recursivelyAddFilesToList(rootDirectory, fileList);
       return toTextFileList(fileList);
     }
 
-    return FluentIterable.from(toIterable(zipFile.entries()))
-        .filter(
-            new Predicate<ZipEntry>() {
-              public boolean apply(ZipEntry jarEntry) {
-                return !jarEntry.isDirectory() && jarEntry.getName().startsWith(path);
-              }
-            })
-        .transform(
-            new Function<ZipEntry, TextFile>() {
-              public TextFile apply(ZipEntry jarEntry) {
-                return new TextFile(getUriFor(jarEntry));
-              }
-            })
-        .toList();
+    return zipFile.stream()
+        .filter(jarEntry -> !jarEntry.isDirectory() && jarEntry.getName().startsWith(path))
+        .map(jarEntry -> new TextFile(getUriFor(jarEntry)))
+        .collect(Collectors.toList());
   }
 
   private URI getUriFor(ZipEntry jarEntry) {
@@ -166,7 +166,7 @@ public class ClasspathFileSource implements FileSource {
   }
 
   private void recursivelyAddFilesToList(File root, List<File> fileList) {
-    File[] files = root.listFiles();
+    File[] files = Optional.ofNullable(root.listFiles()).orElse(new File[0]);
     for (File file : files) {
       if (file.isDirectory()) {
         recursivelyAddFilesToList(file, fileList);
@@ -177,14 +177,7 @@ public class ClasspathFileSource implements FileSource {
   }
 
   private List<TextFile> toTextFileList(List<File> fileList) {
-    return newArrayList(
-        transform(
-            fileList,
-            new Function<File, TextFile>() {
-              public TextFile apply(File input) {
-                return new TextFile(input.toURI());
-              }
-            }));
+    return fileList.stream().map(input -> new TextFile(input.toURI())).collect(Collectors.toList());
   }
 
   @Override
@@ -201,15 +194,6 @@ public class ClasspathFileSource implements FileSource {
 
   @Override
   public void deleteFile(String name) {}
-
-  private static <T> Iterable<T> toIterable(final Enumeration<T> e) {
-    return new Iterable<T>() {
-      @Override
-      public Iterator<T> iterator() {
-        return Iterators.forEnumeration(e);
-      }
-    };
-  }
 
   private void assertExistsAndIsDirectory() {
     if (rootDirectory.exists() && !rootDirectory.isDirectory()) {
