@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012-2021 Thomas Akehurst
+ * Copyright (C) 2012-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,12 +15,7 @@
  */
 package com.github.tomakehurst.wiremock.core;
 
-import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.NOT_MATCHED;
-import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.TO_LOGGED_REQUEST;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
-import static com.google.common.collect.Iterables.contains;
-import static com.google.common.collect.Iterables.transform;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 
 import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
@@ -30,25 +25,21 @@ import com.github.tomakehurst.wiremock.common.FileSource;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
 import com.github.tomakehurst.wiremock.extension.*;
 import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilter;
+import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilterV2;
 import com.github.tomakehurst.wiremock.global.GlobalSettings;
-import com.github.tomakehurst.wiremock.global.GlobalSettingsHolder;
 import com.github.tomakehurst.wiremock.http.*;
 import com.github.tomakehurst.wiremock.matching.RequestMatcherExtension;
 import com.github.tomakehurst.wiremock.matching.RequestPattern;
 import com.github.tomakehurst.wiremock.matching.StringValuePattern;
 import com.github.tomakehurst.wiremock.recording.*;
 import com.github.tomakehurst.wiremock.standalone.MappingsLoader;
+import com.github.tomakehurst.wiremock.store.DefaultStores;
+import com.github.tomakehurst.wiremock.store.SettingsStore;
+import com.github.tomakehurst.wiremock.store.Stores;
 import com.github.tomakehurst.wiremock.stubbing.*;
 import com.github.tomakehurst.wiremock.verification.*;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.mutable.MutableBoolean;
 
 public class WireMockApp implements StubServer, Admin {
@@ -58,10 +49,11 @@ public class WireMockApp implements StubServer, Admin {
   public static final String MAPPINGS_ROOT = "mappings";
   private static final MutableBoolean FACTORIES_LOADING_OPTIMIZED = new MutableBoolean(false);
 
+  private final Stores stores;
   private final Scenarios scenarios;
   private final StubMappings stubMappings;
   private final RequestJournal requestJournal;
-  private final GlobalSettingsHolder globalSettingsHolder;
+  private final SettingsStore settingsStore;
   private final boolean browserProxyingEnabled;
   private final MappingsLoader defaultMappingsLoader;
   private final Container container;
@@ -72,6 +64,8 @@ public class WireMockApp implements StubServer, Admin {
 
   private Options options;
 
+  private Extensions extensions;
+
   public WireMockApp(Options options, Container container) {
     if (!options.getDisableOptimizeXmlFactoriesLoading() && FACTORIES_LOADING_OPTIMIZED.isFalse()) {
       Xml.optimizeFactoriesLoading();
@@ -79,34 +73,49 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     this.options = options;
-
-    FileSource fileSource = options.filesRoot();
+    this.stores = options.getStores();
+    this.stores.start();
 
     this.browserProxyingEnabled = options.browserProxySettings().enabled();
     this.defaultMappingsLoader = options.mappingsLoader();
     this.mappingsSaver = options.mappingsSaver();
-    globalSettingsHolder = new GlobalSettingsHolder();
+
+    this.settingsStore = stores.getSettingsStore();
+
+    extensions =
+        new Extensions(
+            options.getDeclaredExtensions(),
+            this,
+            options,
+            stores,
+            options.filesRoot().child(FILES_ROOT));
+    extensions.load();
 
     Map<String, RequestMatcherExtension> customMatchers =
-        options.extensionsOfType(RequestMatcherExtension.class);
+        extensions.ofType(RequestMatcherExtension.class);
 
     requestJournal =
         options.requestJournalDisabled()
             ? new DisabledRequestJournal()
-            : new InMemoryRequestJournal(options.maxRequestJournalEntries(), customMatchers);
+            : new StoreBackedRequestJournal(
+                options.maxRequestJournalEntries().orElse(null),
+                customMatchers,
+                stores.getRequestJournalStore());
 
-    scenarios = new Scenarios();
+    scenarios = new InMemoryScenarios(stores.getScenariosStore());
     stubMappings =
-        new InMemoryStubMappings(
+        new StoreBackedStubMappings(
+            stores.getStubStore(),
             scenarios,
             customMatchers,
-            options.extensionsOfType(ResponseDefinitionTransformer.class),
-            fileSource,
-            ImmutableList.copyOf(options.extensionsOfType(StubLifecycleListener.class).values()));
+            extensions.ofType(ResponseDefinitionTransformer.class),
+            extensions.ofType(ResponseDefinitionTransformerV2.class),
+            stores.getFilesBlobStore(),
+            List.copyOf(extensions.ofType(StubLifecycleListener.class).values()));
     nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this);
-    globalSettingsListeners =
-        ImmutableList.copyOf(options.extensionsOfType(GlobalSettingsListener.class).values());
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
+    globalSettingsListeners = List.copyOf(extensions.ofType(GlobalSettingsListener.class).values());
 
     this.container = container;
     loadDefaultMappings();
@@ -117,99 +126,112 @@ public class WireMockApp implements StubServer, Admin {
       MappingsLoader defaultMappingsLoader,
       MappingsSaver mappingsSaver,
       boolean requestJournalDisabled,
-      Optional<Integer> maxRequestJournalEntries,
+      Integer maxRequestJournalEntries,
       Map<String, ResponseDefinitionTransformer> transformers,
+      Map<String, ResponseDefinitionTransformerV2> v2transformers,
       Map<String, RequestMatcherExtension> requestMatchers,
       FileSource rootFileSource,
       Container container) {
 
+    this.stores = new DefaultStores(rootFileSource);
+
     this.browserProxyingEnabled = browserProxyingEnabled;
     this.defaultMappingsLoader = defaultMappingsLoader;
     this.mappingsSaver = mappingsSaver;
-    globalSettingsHolder = new GlobalSettingsHolder();
+    this.settingsStore = stores.getSettingsStore();
     requestJournal =
         requestJournalDisabled
             ? new DisabledRequestJournal()
-            : new InMemoryRequestJournal(maxRequestJournalEntries, requestMatchers);
-    scenarios = new Scenarios();
+            : new StoreBackedRequestJournal(
+                maxRequestJournalEntries, requestMatchers, stores.getRequestJournalStore());
+    scenarios = new InMemoryScenarios(stores.getScenariosStore());
     stubMappings =
-        new InMemoryStubMappings(
+        new StoreBackedStubMappings(
+            stores.getStubStore(),
             scenarios,
             requestMatchers,
             transformers,
-            rootFileSource,
-            Collections.<StubLifecycleListener>emptyList());
+            v2transformers,
+            stores.getFilesBlobStore(),
+            Collections.emptyList());
     this.container = container;
     nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this);
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
     globalSettingsListeners = Collections.emptyList();
     loadDefaultMappings();
   }
 
   public AdminRequestHandler buildAdminRequestHandler() {
     AdminRoutes adminRoutes =
-        AdminRoutes.defaultsPlus(
-            options.extensionsOfType(AdminApiExtension.class).values(),
-            options.getNotMatchedRenderer());
+        AdminRoutes.forServer(extensions.ofType(AdminApiExtension.class).values(), stores);
     return new AdminRequestHandler(
         adminRoutes,
         this,
         new BasicResponseRenderer(),
         options.getAdminAuthenticator(),
         options.getHttpsRequiredForAdminApi(),
-        getAdminRequestFilters());
+        getAdminRequestFilters(),
+        getV2AdminRequestFilters(),
+        options.getDataTruncationSettings());
   }
 
   public StubRequestHandler buildStubRequestHandler() {
-    Map<String, PostServeAction> postServeActions = options.extensionsOfType(PostServeAction.class);
+    Map<String, PostServeAction> postServeActions = extensions.ofType(PostServeAction.class);
+    Map<String, ServeEventListener> serveEventListeners =
+        extensions.ofType(ServeEventListener.class);
     BrowserProxySettings browserProxySettings = options.browserProxySettings();
     return new StubRequestHandler(
         this,
         new StubResponseRenderer(
-            options.filesRoot().child(FILES_ROOT),
-            getGlobalSettingsHolder(),
+            options.getStores().getFilesBlobStore(),
+            settingsStore,
             new ProxyResponseRenderer(
                 options.proxyVia(),
                 options.httpsSettings().trustStore(),
                 options.shouldPreserveHostHeader(),
                 options.proxyHostHeader(),
-                globalSettingsHolder,
+                settingsStore,
                 browserProxySettings.trustAllProxyTargets(),
-                browserProxySettings.trustedProxyTargets()),
-            ImmutableList.copyOf(options.extensionsOfType(ResponseTransformer.class).values())),
+                browserProxySettings.trustedProxyTargets(),
+                options.getStubCorsEnabled(),
+                options.getProxyTargetRules(),
+                options.proxyTimeout()),
+            List.copyOf(extensions.ofType(ResponseTransformer.class).values()),
+            List.copyOf(extensions.ofType(ResponseTransformerV2.class).values())),
         this,
         postServeActions,
+        serveEventListeners,
         requestJournal,
         getStubRequestFilters(),
-        options.getStubRequestLoggingDisabled());
+        getV2StubRequestFilters(),
+        options.getStubRequestLoggingDisabled(),
+        options.getDataTruncationSettings(),
+        options.getNotMatchedRendererFactory().apply(extensions));
   }
 
   private List<RequestFilter> getAdminRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToAdmin();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToAdmin)
+        .collect(Collectors.toList());
+  }
+
+  private List<RequestFilterV2> getV2AdminRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToAdmin)
+        .collect(Collectors.toList());
   }
 
   private List<RequestFilter> getStubRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToStubs();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToStubs)
+        .collect(Collectors.toList());
   }
 
-  public GlobalSettingsHolder getGlobalSettingsHolder() {
-    return globalSettingsHolder;
+  private List<RequestFilterV2> getV2StubRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToStubs)
+        .collect(Collectors.toList());
   }
 
   private void loadDefaultMappings() {
@@ -221,14 +243,15 @@ public class WireMockApp implements StubServer, Admin {
   }
 
   @Override
-  public ServeEvent serveStubFor(Request request) {
-    ServeEvent serveEvent = stubMappings.serveFor(request);
+  public ServeEvent serveStubFor(ServeEvent initialServeEvent) {
+    ServeEvent serveEvent = stubMappings.serveFor(initialServeEvent);
 
-    if (serveEvent.isNoExactMatch()) {
-      LoggedRequest loggedRequest = LoggedRequest.createFrom(request);
-      if (request.isBrowserProxyRequest() && browserProxyingEnabled) {
-        return ServeEvent.of(loggedRequest, ResponseDefinition.browserProxy(request));
-      }
+    if (serveEvent.isNoExactMatch()
+        && browserProxyingEnabled
+        && serveEvent.getRequest().isBrowserProxyRequest()
+        && getGlobalSettings().getSettings().getProxyPassThrough()) {
+      return ServeEvent.ofUnmatched(
+          serveEvent.getRequest(), ResponseDefinition.browserProxy(serveEvent.getRequest()));
     }
 
     return serveEvent;
@@ -248,15 +271,21 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public void removeStubMapping(StubMapping stubMapping) {
-    final Optional<StubMapping> maybeStub = stubMappings.get(stubMapping.getId());
-    if (maybeStub.isPresent()) {
-      StubMapping stubToDelete = maybeStub.get();
-      if (stubToDelete.shouldBePersisted()) {
-        mappingsSaver.remove(stubToDelete);
-      }
-    }
+    stubMappings
+        .get(stubMapping.getId())
+        .ifPresent(
+            stubToDelete -> {
+              if (stubToDelete.shouldBePersisted()) {
+                mappingsSaver.remove(stubToDelete);
+              }
+            });
 
     stubMappings.removeMapping(stubMapping);
+  }
+
+  @Override
+  public void removeStubMapping(UUID id) {
+    stubMappings.get(id).ifPresent(this::removeStubMapping);
   }
 
   @Override
@@ -281,6 +310,7 @@ public class WireMockApp implements StubServer, Admin {
   public void saveMappings() {
     for (StubMapping stubMapping : stubMappings.getAll()) {
       stubMapping.setPersistent(true);
+      stubMappings.editMapping(stubMapping);
     }
     mappingsSaver.save(stubMappings.getAll());
   }
@@ -357,10 +387,10 @@ public class WireMockApp implements StubServer, Admin {
   public FindRequestsResult findUnmatchedRequests() {
     try {
       List<LoggedRequest> requests =
-          from(requestJournal.getAllServeEvents())
-              .filter(NOT_MATCHED)
-              .transform(TO_LOGGED_REQUEST)
-              .toList();
+          requestJournal.getAllServeEvents().stream()
+              .filter(ServeEvent::isNoExactMatch)
+              .map(ServeEvent::getRequest)
+              .collect(Collectors.toList());
       return FindRequestsResult.withRequests(requests);
     } catch (RequestJournalDisabledException e) {
       return FindRequestsResult.withRequestJournalDisabled();
@@ -386,27 +416,32 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
-    ImmutableList.Builder<NearMiss> listBuilder = ImmutableList.builder();
-    Iterable<ServeEvent> unmatchedServeEvents =
-        from(requestJournal.getAllServeEvents())
-            .filter(
-                new Predicate<ServeEvent>() {
-                  @Override
-                  public boolean apply(ServeEvent input) {
-                    return input.isNoExactMatch();
-                  }
-                });
+    List<NearMiss> nearMisses = new ArrayList<>();
+    List<ServeEvent> unmatchedServeEvents =
+        requestJournal.getAllServeEvents().stream()
+            .filter(ServeEvent::isNoExactMatch)
+            .collect(Collectors.toList());
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
-      listBuilder.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
+      nearMisses.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
     }
 
-    return new FindNearMissesResult(listBuilder.build());
+    return new FindNearMissesResult(nearMisses);
   }
 
   @Override
   public GetScenariosResult getAllScenarios() {
     return new GetScenariosResult(stubMappings.getAllScenarios());
+  }
+
+  @Override
+  public void resetScenario(String name) {
+    scenarios.resetSingle(name);
+  }
+
+  @Override
+  public void setScenarioState(String name, String state) {
+    scenarios.setSingle(name, state);
   }
 
   @Override
@@ -421,18 +456,18 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public GetGlobalSettingsResult getGlobalSettings() {
-    return new GetGlobalSettingsResult(globalSettingsHolder.get());
+    return new GetGlobalSettingsResult(settingsStore.get());
   }
 
   @Override
   public void updateGlobalSettings(GlobalSettings newSettings) {
-    GlobalSettings oldSettings = globalSettingsHolder.get();
+    GlobalSettings oldSettings = settingsStore.get();
 
     for (GlobalSettingsListener listener : globalSettingsListeners) {
       listener.beforeGlobalSettingsUpdated(oldSettings, newSettings);
     }
 
-    globalSettingsHolder.replaceWith(newSettings);
+    settingsStore.set(newSettings);
 
     for (GlobalSettingsListener listener : globalSettingsListeners) {
       listener.afterGlobalSettingsUpdated(oldSettings, newSettings);
@@ -450,6 +485,7 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public void shutdownServer() {
+    stores.stop();
     container.shutdown();
   }
 
@@ -509,7 +545,7 @@ public class WireMockApp implements StubServer, Admin {
   public void importStubs(StubImport stubImport) {
     List<StubMapping> mappings = stubImport.getMappings();
     StubImport.Options importOptions =
-        firstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
+        getFirstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
 
     for (int i = mappings.size() - 1; i >= 0; i--) {
       StubMapping mapping = mappings.get(i);
@@ -523,17 +559,9 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     if (importOptions.getDeleteAllNotInImport()) {
-      Iterable<UUID> ids =
-          transform(
-              mappings,
-              new Function<StubMapping, UUID>() {
-                @Override
-                public UUID apply(StubMapping input) {
-                  return input.getId();
-                }
-              });
+      List<UUID> ids = mappings.stream().map(StubMapping::getId).collect(Collectors.toList());
       for (StubMapping mapping : listAllStubMappings().getMappings()) {
-        if (!contains(ids, mapping.getId())) {
+        if (!ids.contains(mapping.getId())) {
           removeStubMapping(mapping);
         }
       }
