@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021 Thomas Akehurst
+ * Copyright (C) 2021-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,17 +18,22 @@ package com.github.tomakehurst.wiremock.extension.responsetemplating.helpers;
 import static java.util.Arrays.asList;
 
 import com.github.jknack.handlebars.Options;
-import com.google.common.collect.ImmutableList;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 
 public class ArrayHelper extends HandlebarsHelper<Object> {
 
   @Override
   public Object apply(Object context, Options options) throws IOException {
     if (context == null || context == options.context.model()) {
-      return ImmutableList.of();
+      return List.of();
     }
 
-    return ImmutableList.builder().add(context).addAll(asList(options.params)).build();
+    List<Object> list = new ArrayList<>();
+    list.add(context);
+    list.addAll(asList(options.params));
+
+    return list;
   }
 }
