@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011-2021 Thomas Akehurst
+ * Copyright (C) 2011-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,28 +16,29 @@
 package com.github.tomakehurst.wiremock.matching;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.anyUrl;
+import static com.github.tomakehurst.wiremock.common.ContentTypes.AUTHORIZATION;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 import static com.github.tomakehurst.wiremock.matching.RequestMatcherExtension.NEVER;
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
 import static com.github.tomakehurst.wiremock.matching.WeightedMatchResult.weight;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
-import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toList;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.github.tomakehurst.wiremock.client.BasicCredentials;
-import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.common.Json;
+import com.github.tomakehurst.wiremock.common.Urls;
+import com.github.tomakehurst.wiremock.common.url.PathParams;
+import com.github.tomakehurst.wiremock.common.url.PathTemplate;
 import com.github.tomakehurst.wiremock.http.Cookie;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.RequestMethod;
 import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.ImmutableMap;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import org.apache.commons.lang3.StringUtils;
 
 public class RequestPattern implements NamedValueMatcher<Request> {
@@ -48,7 +49,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private final UrlPattern url;
   private final RequestMethod method;
   private final Map<String, MultiValuePattern> headers;
+
+  private final Map<String, StringValuePattern> pathParams;
   private final Map<String, MultiValuePattern> queryParams;
+  private final Map<String, MultiValuePattern> formParams;
   private final Map<String, StringValuePattern> cookies;
   private final BasicCredentials basicAuthCredentials;
   private final List<ContentPattern<?>> bodyPatterns;
@@ -65,7 +69,9 @@ public class RequestPattern implements NamedValueMatcher<Request> {
       final UrlPattern url,
       final RequestMethod method,
       final Map<String, MultiValuePattern> headers,
+      final Map<String, StringValuePattern> pathParams,
       final Map<String, MultiValuePattern> queryParams,
+      final Map<String, MultiValuePattern> formParams,
       final Map<String, StringValuePattern> cookies,
       final BasicCredentials basicAuthCredentials,
       final List<ContentPattern<?>> bodyPatterns,
@@ -75,9 +81,11 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     this.scheme = scheme;
     this.host = host;
     this.port = port;
-    this.url = firstNonNull(url, UrlPattern.ANY);
-    this.method = firstNonNull(method, RequestMethod.ANY);
+    this.url = getFirstNonNull(url, UrlPattern.ANY);
+    this.method = getFirstNonNull(method, RequestMethod.ANY);
     this.headers = headers;
+    this.pathParams = pathParams;
+    this.formParams = formParams;
     this.queryParams = queryParams;
     this.cookies = cookies;
     this.basicAuthCredentials = basicAuthCredentials;
@@ -98,8 +106,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
                         weight(portMatches(request), 10.0),
                         weight(RequestPattern.this.url.match(request.getUrl()), 10.0),
                         weight(RequestPattern.this.method.match(request.getMethod()), 3.0),
+                        weight(allPathParamsMatch(request)),
                         weight(allHeadersMatchResult(request)),
                         weight(allQueryParamsMatch(request)),
+                        weight(allFormParamsMatch(request)),
                         weight(allCookiesMatch(request)),
                         weight(allBodyPatternsMatch(request)),
                         weight(allMultipartPatternsMatch(request))));
@@ -127,9 +137,12 @@ public class RequestPattern implements NamedValueMatcher<Request> {
       @JsonProperty("urlPattern") String urlPattern,
       @JsonProperty("urlPath") String urlPath,
       @JsonProperty("urlPathPattern") String urlPathPattern,
+      @JsonProperty("urlPathTemplate") String urlPathTemplate,
       @JsonProperty("method") RequestMethod method,
       @JsonProperty("headers") Map<String, MultiValuePattern> headers,
+      @JsonProperty("pathParameters") Map<String, StringValuePattern> pathParams,
       @JsonProperty("queryParameters") Map<String, MultiValuePattern> queryParams,
+      @JsonProperty("formParameters") Map<String, MultiValuePattern> formParams,
       @JsonProperty("cookies") Map<String, StringValuePattern> cookies,
       @JsonProperty("basicAuth") BasicCredentials basicAuthCredentials,
       @JsonProperty("bodyPatterns") List<ContentPattern<?>> bodyPatterns,
@@ -140,10 +153,12 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         scheme,
         host,
         port,
-        UrlPattern.fromOneOf(url, urlPattern, urlPath, urlPathPattern),
+        UrlPattern.fromOneOf(url, urlPattern, urlPath, urlPathPattern, urlPathTemplate),
         method,
         headers,
+        pathParams,
         queryParams,
+        formParams,
         cookies,
         basicAuthCredentials,
         bodyPatterns,
@@ -152,13 +167,15 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         multiPattern);
   }
 
-  public static RequestPattern ANYTHING =
+  public static final RequestPattern ANYTHING =
       new RequestPattern(
           null,
           null,
           null,
-          WireMock.anyUrl(),
+          anyUrl(),
           RequestMethod.ANY,
+          null,
+          null,
           null,
           null,
           null,
@@ -181,6 +198,8 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         null,
         null,
         null,
+        null,
+        null,
         customMatcher,
         null);
   }
@@ -197,6 +216,8 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         null,
         null,
         null,
+        null,
+        null,
         customMatcherDefinition,
         null,
         null);
@@ -204,7 +225,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   @Override
   public MatchResult match(Request request) {
-    return match(request, Collections.<String, RequestMatcherExtension>emptyMap());
+    return match(request, Collections.emptyMap());
   }
 
   public static RequestPattern everything() {
@@ -214,7 +235,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   public MatchResult match(Request request, Map<String, RequestMatcherExtension> customMatchers) {
     if (customMatcherDefinition != null) {
       RequestMatcherExtension requestMatcher =
-          firstNonNull(customMatchers.get(customMatcherDefinition.getName()), NEVER);
+          getFirstNonNull(customMatchers.get(customMatcherDefinition.getName()), NEVER);
 
       MatchResult standardMatchResult = matcher.match(request);
       MatchResult customMatchResult =
@@ -229,37 +250,23 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private MatchResult allCookiesMatch(final Request request) {
     if (cookies != null && !cookies.isEmpty()) {
       return MatchResult.aggregate(
-          from(cookies.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, StringValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        final Map.Entry<String, StringValuePattern> cookiePattern) {
-                      Cookie cookie = request.getCookies().get(cookiePattern.getKey());
-                      if (cookie == null) {
-                        return cookiePattern.getValue().nullSafeIsAbsent()
-                            ? MatchResult.exactMatch()
-                            : MatchResult.noMatch();
-                      }
-
-                      return from(cookie.getValues())
-                          .transform(
-                              new Function<String, MatchResult>() {
-                                @Override
-                                public MatchResult apply(String cookieValue) {
-                                  return cookiePattern.getValue().match(cookieValue);
-                                }
-                              })
-                          .toSortedList(
-                              new Comparator<MatchResult>() {
-                                @Override
-                                public int compare(MatchResult o1, MatchResult o2) {
-                                  return o2.compareTo(o1);
-                                }
-                              })
-                          .get(0);
+          cookies.entrySet().stream()
+              .map(
+                  entry -> {
+                    final StringValuePattern cookiePattern = entry.getValue();
+                    Cookie cookie = request.getCookies().get(entry.getKey());
+                    if (cookie == null) {
+                      return cookiePattern.nullSafeIsAbsent()
+                          ? MatchResult.exactMatch()
+                          : MatchResult.noMatch();
                     }
+
+                    return cookie.getValues().stream()
+                        .map(cookiePattern::match)
+                        .max(Comparator.naturalOrder())
+                        .orElse(MatchResult.noMatch());
                   })
-              .toList());
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -284,14 +291,11 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
     if (combinedHeaders != null && !combinedHeaders.isEmpty()) {
       return MatchResult.aggregate(
-          from(combinedHeaders.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(Map.Entry<String, MultiValuePattern> headerPattern) {
-                      return headerPattern.getValue().match(request.header(headerPattern.getKey()));
-                    }
-                  })
-              .toList());
+          combinedHeaders.entrySet().stream()
+              .map(
+                  headerPattern ->
+                      headerPattern.getValue().match(request.header(headerPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -303,75 +307,94 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     }
 
     Map<String, MultiValuePattern> combinedHeaders = headers;
-    ImmutableMap.Builder<String, MultiValuePattern> allHeadersBuilder =
-        ImmutableMap.<String, MultiValuePattern>builder()
-            .putAll(
-                firstNonNull(combinedHeaders, Collections.<String, MultiValuePattern>emptyMap()));
+    Map<String, MultiValuePattern> allHeadersBuilder =
+        new HashMap<>(getFirstNonNull(combinedHeaders, Collections.emptyMap()));
     allHeadersBuilder.put(AUTHORIZATION, basicAuthCredentials.asAuthorizationMultiValuePattern());
-    combinedHeaders = allHeadersBuilder.build();
+    combinedHeaders = allHeadersBuilder;
     return combinedHeaders;
   }
 
   private MatchResult allQueryParamsMatch(final Request request) {
     if (queryParams != null && !queryParams.isEmpty()) {
       return MatchResult.aggregate(
-          from(queryParams.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        Map.Entry<String, MultiValuePattern> queryParamPattern) {
-                      return queryParamPattern
+          queryParams.entrySet().stream()
+              .map(
+                  queryParamPattern ->
+                      queryParamPattern
                           .getValue()
-                          .match(request.queryParameter(queryParamPattern.getKey()));
-                    }
-                  })
-              .toList());
+                          .match(request.queryParameter(queryParamPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
+  private MatchResult allFormParamsMatch(final Request request) {
+    if (formParams != null && !formParams.isEmpty()) {
+      return MatchResult.aggregate(
+          formParams.entrySet().stream()
+              .map(
+                  formParamPattern ->
+                      formParamPattern
+                          .getValue()
+                          .match(request.formParameter(formParamPattern.getKey())))
+              .collect(toList()));
+    }
+
+    return MatchResult.exactMatch();
+  }
+
+  private MatchResult allPathParamsMatch(final Request request) {
+    if (url.getClass().equals(UrlPathTemplatePattern.class)
+        && pathParams != null
+        && !pathParams.isEmpty()) {
+      final UrlPathTemplatePattern urlPathTemplatePattern = (UrlPathTemplatePattern) url;
+      final PathTemplate pathTemplate = urlPathTemplatePattern.getPathTemplate();
+      if (!pathTemplate.matches(request.getUrl())) {
+        return MatchResult.noMatch();
+      }
+
+      final PathParams requestPathParams = pathTemplate.parse(Urls.getPath(request.getUrl()));
+      return MatchResult.aggregate(
+          pathParams.entrySet().stream()
+              .map(entry -> entry.getValue().match(requestPathParams.get(entry.getKey())))
+              .collect(toList()));
+    }
+
+    return MatchResult.exactMatch();
+  }
+
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private MatchResult allBodyPatternsMatch(final Request request) {
     if (bodyPatterns != null && !bodyPatterns.isEmpty() && request.getBody() != null) {
       return MatchResult.aggregate(
-          from(bodyPatterns)
-              .transform(
-                  new Function<ContentPattern, MatchResult>() {
-                    @Override
-                    public MatchResult apply(ContentPattern pattern) {
-                      if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
-                        String body =
-                            StringUtils.isEmpty(request.getBodyAsString())
-                                ? null
-                                : request.getBodyAsString();
-                        return pattern.match(body);
-                      }
+          bodyPatterns.stream()
+              .map(
+                  (Function<ContentPattern, MatchResult>)
+                      pattern -> {
+                        if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
+                          String body =
+                              StringUtils.isEmpty(request.getBodyAsString())
+                                  ? null
+                                  : request.getBodyAsString();
+                          return pattern.match(body);
+                        }
 
-                      return pattern.match(request.getBody());
-                    }
-                  })
-              .toList());
+                        return pattern.match(request.getBody());
+                      })
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
   private MatchResult allMultipartPatternsMatch(final Request request) {
     if (multipartPatterns != null && !multipartPatterns.isEmpty()) {
       if (!request.isMultipart()) {
         return MatchResult.noMatch();
       }
       return MatchResult.aggregate(
-          from(multipartPatterns)
-              .transform(
-                  new Function<MultipartValuePattern, MatchResult>() {
-                    public MatchResult apply(MultipartValuePattern pattern) {
-                      return pattern.match(request);
-                    }
-                  })
-              .toList());
+          multipartPatterns.stream().map(pattern -> pattern.match(request)).collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -409,6 +432,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     return urlPatternOrNull(UrlPathPattern.class, true);
   }
 
+  public String getUrlPathTemplate() {
+    return urlPatternOrNull(UrlPathTemplatePattern.class, false);
+  }
+
   @JsonIgnore
   public UrlPattern getUrlMatcher() {
     return url;
@@ -435,8 +462,16 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     return basicAuthCredentials;
   }
 
+  public Map<String, StringValuePattern> getPathParameters() {
+    return pathParams;
+  }
+
   public Map<String, MultiValuePattern> getQueryParameters() {
     return queryParams;
+  }
+
+  public Map<String, MultiValuePattern> getFormParameters() {
+    return formParams;
   }
 
   public Map<String, StringValuePattern> getCookies() {
@@ -533,20 +568,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   public static Predicate<Request> thatMatch(
       final RequestPattern pattern, final Map<String, RequestMatcherExtension> customMatchers) {
-    return new Predicate<Request>() {
-      @Override
-      public boolean apply(Request request) {
-        return pattern.match(request, customMatchers).isExactMatch();
-      }
-    };
+    return request -> pattern.match(request, customMatchers).isExactMatch();
   }
 
-  public static Predicate<ServeEvent> withRequstMatching(final RequestPattern pattern) {
-    return new Predicate<ServeEvent>() {
-      @Override
-      public boolean apply(ServeEvent serveEvent) {
-        return pattern.match(serveEvent.getRequest()).isExactMatch();
-      }
-    };
+  public static Predicate<ServeEvent> withRequestMatching(final RequestPattern pattern) {
+    return serveEvent -> pattern.match(serveEvent.getRequest()).isExactMatch();
   }
 }
