@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2021 Thomas Akehurst
+ * Copyright (C) 2016-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,16 +16,18 @@
 package com.github.tomakehurst.wiremock.matching;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.*;
+import static com.github.tomakehurst.wiremock.stubbing.SubEvent.WARNING;
+import static com.github.tomakehurst.wiremock.testsupport.ServeEventChecks.checkJsonError;
+import static com.github.tomakehurst.wiremock.testsupport.ServeEventChecks.checkMessage;
 import static com.github.tomakehurst.wiremock.testsupport.WireMatchers.equalToJson;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.common.Json;
-import com.google.common.collect.ImmutableMap;
 import java.util.Collections;
+import java.util.Map;
 import org.json.JSONException;
 import org.junit.jupiter.api.Test;
 import org.skyscreamer.jsonassert.JSONAssert;
@@ -96,7 +98,7 @@ public class MatchesXPathPatternTest {
     StringValuePattern pattern =
         WireMock.matchingXPath(
             "//sub:subThing[.='The stuff']",
-            ImmutableMap.of("sub", "http://subthings", "t", "http://things"));
+            Map.of("sub", "http://subthings", "t", "http://things"));
 
     MatchResult match = pattern.match(xml);
     assertTrue(match.isExactMatch());
@@ -254,11 +256,7 @@ public class MatchesXPathPatternTest {
   @Test
   public void serialisesCorrectlyWithNamspaces() throws JSONException {
     MatchesXPathPattern pattern =
-        new MatchesXPathPattern(
-            "//*",
-            ImmutableMap.of(
-                "one", "http://one.com/",
-                "two", "http://two.com/"));
+        new MatchesXPathPattern("//*", Map.of("one", "http://one.com/", "two", "http://two.com/"));
 
     String json = Json.write(pattern);
 
@@ -299,5 +297,53 @@ public class MatchesXPathPatternTest {
   @Test
   public void noMatchOnNullValue() {
     assertThat(WireMock.matchingXPath("//*").match(null).isExactMatch(), is(false));
+  }
+
+  @Test
+  void reportsErrorWhenActualXmlIsInvalid() {
+    MatchResult matchResult = new MatchesXPathPattern("/thing").match("<xml");
+    checkMessage(
+        matchResult,
+        WARNING,
+        "Warning: failed to parse the XML document. Reason: {\n  \"errors\" : [ {\n    \"code\" : 50,\n    \"title\" : \"XML document structures must start and end within the same entity.\"\n  } ]\n}\nXML: <xml");
+  }
+
+  @Test
+  void reportsErrorWhenActualIsNotXml() {
+    MatchResult matchResult = new MatchesXPathPattern("/thing").match("{not-xml");
+    checkMessage(matchResult, WARNING, "Warning: failed to parse the XML document\nXML: {not-xml");
+  }
+
+  @Test
+  void reportsErrorFromSubMatcher() {
+    MatchResult matchResult =
+        new MatchesXPathPattern("/something/text()", WireMock.equalToJson("{}"))
+            .match("<something>{ bad json</something>");
+    checkJsonError(
+        matchResult,
+        "Unexpected character ('b' (code 98)): was expecting double-quote to start field name\n at [Source: (String)\"{ bad json\"; line: 1, column: 4]");
+  }
+
+  @Test
+  void reportsErrorWhenXPathExpressionIsInvalid() {
+    MatchResult matchResult = new MatchesXPathPattern("/\\!what?").match("<things/>");
+    checkMessage(
+        matchResult, WARNING, "Warning: failed to evaluate the XPath expression /\\!what?");
+  }
+
+  @Test
+  public void objectsShouldBeEqualOnSameExpectedValue() {
+    MatchesXPathPattern a = new MatchesXPathPattern("/thing");
+    MatchesXPathPattern b = new MatchesXPathPattern("/thing");
+    MatchesXPathPattern c = new MatchesXPathPattern("/other");
+
+    assertEquals(a, b);
+    assertEquals(a.hashCode(), b.hashCode());
+    assertEquals(b, a);
+    assertEquals(b.hashCode(), a.hashCode());
+    assertNotEquals(a, c);
+    assertNotEquals(a.hashCode(), c.hashCode());
+    assertNotEquals(b, c);
+    assertNotEquals(b.hashCode(), c.hashCode());
   }
 }
