@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2021 Thomas Akehurst
+ * Copyright (C) 2017-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package com.github.tomakehurst.wiremock.matching;
 import static com.github.tomakehurst.wiremock.client.WireMock.aMultipart;
 import static com.github.tomakehurst.wiremock.client.WireMock.equalToJson;
 import static java.util.Arrays.asList;
+import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
@@ -31,8 +32,8 @@ import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.extension.Parameters;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.RequestMethod;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.Test;
 
 public class RequestPatternBuilderTest {
@@ -58,11 +59,13 @@ public class RequestPatternBuilderTest {
             1234,
             WireMock.urlEqualTo("/foo"),
             RequestMethod.POST,
-            ImmutableMap.of("X-Header", MultiValuePattern.of(WireMock.equalTo("bar"))),
-            ImmutableMap.of("query_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
-            ImmutableMap.of("cookie", WireMock.equalTo("yum")),
+            Map.of("X-Header", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            emptyMap(),
+            Map.of("query_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            Map.of("form_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            Map.of("cookie", WireMock.equalTo("yum")),
             new BasicCredentials("user", "pass"),
-            ImmutableList.<ContentPattern<?>>of(WireMock.equalTo("BODY")),
+            List.of(WireMock.equalTo("BODY")),
             null,
             null,
             null);
@@ -116,11 +119,13 @@ public class RequestPatternBuilderTest {
             1234,
             WireMock.urlEqualTo("/foo"),
             RequestMethod.POST,
-            ImmutableMap.of("X-Header", MultiValuePattern.of(WireMock.equalTo("bar"))),
-            ImmutableMap.of("query_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
-            ImmutableMap.of("cookie", WireMock.equalTo("yum")),
+            Map.of("X-Header", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            emptyMap(),
+            Map.of("query_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            Map.of("form_param", MultiValuePattern.of(WireMock.equalTo("bar"))),
+            Map.of("cookie", WireMock.equalTo("yum")),
             new BasicCredentials("user", "pass"),
-            ImmutableList.<ContentPattern<?>>of(WireMock.equalTo("BODY")),
+            List.of(WireMock.equalTo("BODY")),
             null,
             null,
             asList(multipartPattern));
