@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2021 Thomas Akehurst
+ * Copyright (C) 2016-2023 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,8 +21,8 @@ import static com.github.tomakehurst.wiremock.http.RequestMethod.POST;
 import static com.github.tomakehurst.wiremock.http.RequestMethod.PUT;
 import static com.github.tomakehurst.wiremock.matching.MockRequest.mockRequest;
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
+import static com.github.tomakehurst.wiremock.stubbing.ServeEventFactory.newPostMatchServeEvent;
 import static com.github.tomakehurst.wiremock.verification.NearMissCalculator.NEAR_MISS_COUNT;
-import static com.google.common.collect.FluentIterable.from;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.mock;
@@ -31,12 +31,10 @@ import static org.mockito.Mockito.when;
 import com.github.tomakehurst.wiremock.client.MappingBuilder;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
-import com.github.tomakehurst.wiremock.stubbing.Scenarios;
-import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
-import com.github.tomakehurst.wiremock.stubbing.StubMapping;
-import com.github.tomakehurst.wiremock.stubbing.StubMappings;
-import com.google.common.base.Function;
+import com.github.tomakehurst.wiremock.stubbing.*;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -52,7 +50,7 @@ public class NearMissCalculatorTest {
   public void init() {
     stubMappings = mock(StubMappings.class);
     requestJournal = mock(RequestJournal.class);
-    scenarios = new Scenarios();
+    scenarios = new InMemoryScenarios();
     nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
   }
 
@@ -158,30 +156,16 @@ public class NearMissCalculatorTest {
 
   private void givenStubMappings(final MappingBuilder... mappingBuilders) {
     final List<StubMapping> mappings =
-        from(mappingBuilders)
-            .transform(
-                new Function<MappingBuilder, StubMapping>() {
-                  @Override
-                  public StubMapping apply(MappingBuilder input) {
-                    return input.build();
-                  }
-                })
-            .toList();
+        Arrays.stream(mappingBuilders).map(MappingBuilder::build).collect(Collectors.toList());
+
     when(stubMappings.getAll()).thenReturn(mappings);
   }
 
   private void givenRequests(final Request... requests) {
     final List<ServeEvent> serveEvents =
-        from(requests)
-            .transform(
-                new Function<Request, ServeEvent>() {
-                  @Override
-                  public ServeEvent apply(Request request) {
-                    return ServeEvent.of(
-                        LoggedRequest.createFrom(request), new ResponseDefinition());
-                  }
-                })
-            .toList();
+        Arrays.stream(requests)
+            .map(request -> newPostMatchServeEvent(request, new ResponseDefinition()))
+            .collect(Collectors.toList());
 
     when(requestJournal.getAllServeEvents()).thenReturn(serveEvents);
   }
